web-ui/src/main/webapp/app/css/custom.css
/* ... */
.result .message-recipients-line {
	padding-left: 67px;
	position: relative;
	height: 13px;
	overflow: hidden;
	font-size: 10px;
}

.result .message-first-line {
	line-height: 17px;
	padding-right: 7px;
}

.result .message-second-line {
	color: #666;
	padding-right: 7px;
}

.result .preview {
	padding-left: 11px;
	font-size: 11px;
}

.result .message-sender {
	min-width: 150px;
	padding-left: 6px;
}

.result .message-age {
	text-align: right;
	width: 142px;
	max-width: 142px;
}

.result .message-date {
	text-align: right;
	width: 100px;
	max-width: 100px;
}

.result .message-subject {
	font-weight: bold;
	width: auto;
	padding-left: 6px;
}

.result .message-size {
	color: #666;
	width: 59px;
	font-size: 10px;
	padding-top: 1px;
	padding-left: 25px;
}

.result .message-sender,
.result .message-subject,
.result .message-date { 
	font-size: 12px;
}

.result .message-flag {
	width: 40px;
	padding-left: 18px;
	max-width: 40px;
	font-size: 16px;
	color: rgb(155, 155, 155);
}

.result .checkmark {
	width: 20px;
	max-width: 20px;
	padding-left: 3px;
	padding-right: 3px;
	vertical-align: middle;
	background-color: transparent;
	color: rgb(158, 157, 157);
}

.result .checkmark:hover {
	background-color: #3068b1;
	visibility: visible;
	color: #fff;
}

.result:hover .checkmark {
	visibility: visible;
}

.result.active-single .checkmark, .result.active-single:hover .checkmark {
	background-color: transparent;
	visibility: visible;
	color: rgb(158, 157, 157);
}

.result.active-multi .checkmark, .result.active-multi:hover .checkmark {
	background-color: transparent;
	visibility: visible;
	color: rgb(158, 157, 157);
}

.result .dropdown-header {
	padding: 0px;
}

.result .collapsed .widget-body,
.result .collapsed .widget-body-inner {
	display: block !important;
}

.result .widget-header {
	font-size: 11px;
	padding-top: 1px;
	line-height: 0px;
	padding-right: 5px;
}

.result .widget-toolbar > a {
	line-height: 10px;
	font-size: 11px;
}

.result .dropdown-title {
	color: #58585a;
	line-height: 13px;
	float: right;
}

.result .dropdown-title {
	float: left;
	display: inline-block;
}

.result .widget-header > .widget-toolbar {
	margin-top: 3px;
	line-height: 9px;
}

/* welcome_name */
.welcome_name {
	line-height: 32px;
	position: absolute;
	z-index: 13;
	top: 3px;
	width: 200px;
	right: 11px;
}

.welcome_name .question-mark {
	padding-left: 15px;
	line-height: 14px;
}

/* dashboard */
.dashboard {
	overflow: hidden !important;
	position: absolute;
	bottom: -9px;
	top: -4px;
	padding-right: 0px;
	width: auto;
	left: 0px;
	right: 724px;
	max-width: 1430px;
	min-width: 830px;
	border-right: 1px solid #c5d0dc;
}

.facets-dropdown {
	height: 42px;
	border-right: 1px solid #c5d0dc;
	border-top: 1px solid #c5d0dc;
	left: -230px;
	padding: 10px 15px;
	position: absolute;
	top: 60px;
	width: 230px;
}

/* sidebar-left (facet panel) */
.sidebar-left {
	border-top: 1px solid #c5d0dc;
	min-width: 230px;
	border-right: 1px solid #c5d0dc;
	height: 100%;
	margin-top: -1px;
	padding-left: 0px;
	margin-left: 0px;
	width: 230px;
	background-color: #f8f8f8;
	padding-right: 0px;
}

.sidebar-left .ironhold-tooltip {
	color: #58585a;
	text-decoration: none;
}

.sidebar-left .tooltip {
	top: 18px !important;
}

.sidebar-left .tooltip-arrow {
	display: none;
}

.sidebar-left .widget-header {
	padding-left: 9px;
}

.sidebar-left .widget-header > :first-child {
	line-height: 20px;
}

.sidebar-left .toggle {
	line-height: 8px;
	padding: 0px 3px;
	cursor: pointer;
}

.sidebar-left .filter-list {
	left: -3px;
	position: absolute;
	width: 230px;
	bottom: 107px;
	top: 3px;
/*	background-color: #f3f3f3; */
}

.filter-list .jspVerticalBar,
.filter-list .jspHorizontalBar {
	  background: #dedcdc !important;

	  /* IE 8 */
	  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";

	  /* IE 5-7 */
	  filter: alpha(opacity=0);

	  /* Netscape */
	  -moz-opacity: 0;

	  /* Safari 1.x */
	  -khtml-opacity: 0;

	  /* Good browsers */
	  opacity: 0;
}

.filter-list .jspContainer {
	width: 229px !important;
}

.sidebar-left .filter-list .jspContainer {
	height: 100% !important;
}

.sidebar-left .filter-list .jspPane {
	width: auto !important;
	left: 0px;
	right: 0px;
}

.sidebar-left .filter-list .widget-header {
	padding-left: 13px !important;
}

.sidebar-left .filter-list > li {
/*	margin-top:-18px; */
}

.sidebar-left .nav-list a {
	text-transform: uppercase;
}

.footer {
	position:fixed;
	bottom: 0px;
	z-index: 12;
	width: auto;
	left: 0px;
	right: 0px;
/*
	position: absolute;
	width: 100%;
	bottom: 0px;
	clear: both;
*/	height: 19px;
	background-color: #2e69b3;
	color: #fff;
	text-transform: uppercase;
}

/* nav-list */
.nav-list.nav-list-simple > li {
	border: 0px;
}

.nav-list.nav-list-simple > li > a {
	line-height: 15px;
	height: auto;
	padding: 5px 0px 5px 0px;
	background-color: transparent;
}

.nav-list.nav-list-simple > li > a:hover {
	background-color: transparent;
	color: #58585a;
}

.nav-list.nav-list-simple > li > a:hover:before {
	background-color: transparent;
}

.nav-list.nav-list-simple > .open > a, .nav-list.nav-list-simple > .open > a:hover {
	background-color: transparent;
	color: #58585a;
}

.nav-list.nav-list-simple > li > a > [class*="icon-"]:first-child {
	min-width: 13px;
	width: 13px;
}

.nav-list.nav-list-simple > li .submenu {
	background-color: transparent;
	border: 0px;
	margin: 0px;
}

.nav-list.nav-list-simple > li .submenu:before {
	border: 0px;
}

.nav-list.nav-list-simple > li > .submenu > li:before {
	border-top: 0px;
}

/* filter */
.filter {
	padding: 0px 0px 0px 4px;
	line-height: 18px;
	float: left;
	width: 100%;
	cursor: pointer;
	position: relative;
}

.filter .filter-value {
	position: absolute;
	top: 0px;
	right: 22px;
}

.filter .checkbox {
	visibility: hidden;
	width: 15px;
	height: 13px;
	min-height: 13px;
	margin: 2px 7px 0px 7px;
	padding: 0px;
	line-height: 1px;
	font-size: 11px;
/*	border: 2px solid #2e69b3; */ 
}
/* ... */

